FastAPI/08_CircuitBreakers/calculate_v1_sleep2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculate-v1
  labels:
    app: calculate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculate
  template:
    metadata:
      labels:
        app: calculate
        version: cat-plus
    spec:
      containers:
      - name: calculate
        image: nutslove/fastapi-calculate-sleep2:v1
        imagePullPolicy: Always
