FastAPI/08_CircuitBreakers/Istio_Circuit_Breakers.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: calculate-cb-policy
spec:
  host: calculate.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutiveGatewayErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 99
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs-for-circuit-breaker
  namespace: default
spec:
  hosts:
    - calculate.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: calculate.default.svc.cluster.local
      timeout: 1s
